// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements/Input ClickableIcon smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="space-y-2">
    <div class="flex flex-col gap-1">
      <label for
             class="text-sm font-medium text-gray-700"
      >
        Password
      </label>
      <div class="relative">
        <svg width="20"
             height="20"
             viewbox="0 0 24 24"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
             class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer left-3"
        >
          <path opacity="0.5"
                d="M3.27489 15.2957C2.42496 14.1915 2 13.6394 2 12C2 10.3606 2.42496 9.80853 3.27489 8.70433C4.97196 6.49956 7.81811 4 12 4C16.1819 4 19.028 6.49956 20.7251 8.70433C21.575 9.80853 22 10.3606 22 12C22 13.6394 21.575 14.1915 20.7251 15.2957C19.028 17.5004 16.1819 20 12 20C7.81811 20 4.97196 17.5004 3.27489 15.2957Z"
                stroke="currentColor"
                stroke-width="1.5"
          >
          </path>
          <path d="M15 12C15 13.6569 13.6569 15 12 15C10.3431 15 9 13.6569 9 12C9 10.3431 10.3431 9 12 9C13.6569 9 15 10.3431 15 12Z"
                stroke="currentColor"
                stroke-width="1.5"
          >
          </path>
        </svg>
        <input class="pl-10 form-input bg-white border-gray-300"
               id
               type="password"
               placeholder="Enter password"
               value
        >
      </div>
    </div>
    <p class="text-sm text-gray-600">
      Click the eye icon to toggle password visibility
    </p>
  </div>
</div>
`;

exports[`Elements/Input Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <div class="relative">
      <input class="form-input bg-white border-gray-300"
             id
             type="text"
             placeholder="Default input field"
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input Disabled smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Username
    </label>
    <div class="relative">
      <svg width="18"
           height="18"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer right-3"
      >
        <circle cx="12"
                cy="6"
                r="4"
                stroke="currentColor"
                stroke-width="1.5"
        >
        </circle>
        <path opacity="0.5"
              d="M20 17.5C20 19.9853 20 22 12 22C4 22 4 19.9853 4 17.5C4 15.0147 7.58172 13 12 13C16.4183 13 20 15.0147 20 17.5Z"
              stroke="currentColor"
              stroke-width="1.5"
        >
        </path>
      </svg>
      <input class="pr-10 form-input bg-gray-100 cursor-not-allowed border-gray-300"
             id
             type="text"
             placeholder="This field is disabled"
             disabled
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input EmailInput smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Email Address
      <span class="text-red-500">
        *
      </span>
    </label>
    <div class="relative">
      <svg width="18"
           height="18"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer right-3"
      >
        <path opacity="0.5"
              d="M2 12C2 8.22876 2 6.34315 3.17157 5.17157C4.34315 4 6.22876 4 10 4H14C17.7712 4 19.6569 4 20.8284 5.17157C22 6.34315 22 8.22876 22 12C22 15.7712 22 17.6569 20.8284 18.8284C19.6569 20 17.7712 20 14 20H10C6.22876 20 4.34315 20 3.17157 18.8284C2 17.6569 2 15.7712 2 12Z"
              stroke="currentColor"
              stroke-width="1.5"
        >
        </path>
        <path d="M6 8L8.1589 9.79908C9.99553 11.3296 10.9139 12.0949 12 12.0949C13.0861 12.0949 14.0045 11.3296 15.8411 9.79908L18 8"
              stroke="currentColor"
              stroke-width="1.5"
              stroke-linecap="round"
        >
        </path>
      </svg>
      <input class="pr-10 form-input bg-white border-gray-300"
             id
             type="email"
             placeholder="your@email.com"
             required
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input IconPositioningComparison smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Icon Positioning Demo
    </label>
    <div class="relative">
      <svg width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer left-3"
      >
        <circle cx="11.5"
                cy="11.5"
                r="9.5"
                stroke="currentColor"
                stroke-width="1.5"
                opacity="0.5"
        >
        </circle>
        <path d="M18.5 18.5L22 22"
              stroke="currentColor"
              stroke-width="1.5"
              stroke-linecap="round"
        >
        </path>
      </svg>
      <input class="pl-10 form-input bg-white border-gray-300"
             id
             type="text"
             placeholder="See different icon positions"
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input NumberInput smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Age
    </label>
    <div class="relative">
      <input class="form-input bg-white border-gray-300"
             id
             type="number"
             placeholder="Enter your age"
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input PasswordInput smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Password
      <span class="text-red-500">
        *
      </span>
    </label>
    <div class="relative">
      <svg width="20"
           height="20"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer right-3"
      >
        <path d="M2 16C2 13.1716 2 11.7574 2.87868 10.8787C3.75736 10 5.17157 10 8 10H16C18.8284 10 20.2426 10 21.1213 10.8787C22 11.7574 22 13.1716 22 16C22 18.8284 22 20.2426 21.1213 21.1213C20.2426 22 18.8284 22 16 22H8C5.17157 22 3.75736 22 2.87868 21.1213C2 20.2426 2 18.8284 2 16Z"
              stroke="currentColor"
              stroke-width="1.5"
        >
        </path>
        <path opacity="0.5"
              d="M6 10V8C6 4.68629 8.68629 2 12 2C15.3137 2 18 4.68629 18 8V10"
              stroke="currentColor"
              stroke-width="1.5"
              stroke-linecap="round"
        >
        </path>
      </svg>
      <input class="pr-10 form-input bg-white border-gray-300"
             id
             type="password"
             placeholder="Enter your password"
             required
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input RTLIconComparison smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="space-y-6">
    <div class="space-y-2">
      <h3 class="font-semibold">
        Default Icon Positioning (iconOppositePosition: false)
      </h3>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700"
        >
          Search (Default)
        </label>
        <div class="relative">
          <svg width="16"
               height="16"
               viewbox="0 0 24 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer left-3"
          >
            <circle cx="11.5"
                    cy="11.5"
                    r="9.5"
                    stroke="currentColor"
                    stroke-width="1.5"
                    opacity="0.5"
            >
            </circle>
            <path d="M18.5 18.5L22 22"
                  stroke="currentColor"
                  stroke-width="1.5"
                  stroke-linecap="round"
            >
            </path>
          </svg>
          <input class="pl-10 form-input bg-white border-gray-300"
                 id
                 type="text"
                 placeholder="LTR: icon on right, RTL: icon on left"
                 value
          >
        </div>
      </div>
    </div>
    <div class="space-y-2">
      <h3 class="font-semibold">
        Opposite Icon Positioning (iconOppositePosition: true)
      </h3>
      <div class="flex flex-col gap-1">
        <label for
               class="text-sm font-medium text-gray-700"
        >
          Search (Opposite)
        </label>
        <div class="relative">
          <svg width="16"
               height="16"
               viewbox="0 0 24 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
               class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer right-3"
          >
            <circle cx="11.5"
                    cy="11.5"
                    r="9.5"
                    stroke="currentColor"
                    stroke-width="1.5"
                    opacity="0.5"
            >
            </circle>
            <path d="M18.5 18.5L22 22"
                  stroke="currentColor"
                  stroke-width="1.5"
                  stroke-linecap="round"
            >
            </path>
          </svg>
          <input class="pr-10 form-input bg-white border-gray-300"
                 id
                 type="text"
                 placeholder="LTR: icon on left, RTL: icon on right"
                 value
          >
        </div>
      </div>
    </div>
    <div class="text-sm text-gray-600 bg-blue-50 p-3 rounded">
      <p>
        <strong>
          Note:
        </strong>
        Icon positioning adapts to your app's RTL/LTR direction automatically.
      </p>
      <p>
        •
        <strong>
          LTR (Left-to-Right):
        </strong>
        Default = right, Opposite = left
      </p>
      <p>
        •
        <strong>
          RTL (Right-to-Left):
        </strong>
        Default = left, Opposite = right
      </p>
    </div>
  </div>
</div>
`;

exports[`Elements/Input Range smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="volume-input"
           class="text-sm font-medium text-gray-700"
    >
      Volume
    </label>
    <div class="relative">
      <input class="w-full py-2.5 bg-white border-gray-300"
             id="volume-input"
             type="range"
             placeholder="Some Text..."
             min="0"
             max="100"
             value="50"
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input Required smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Name
      <span class="text-red-500">
        *
      </span>
    </label>
    <div class="relative">
      <input class="form-input bg-white border-gray-300"
             id
             type="text"
             placeholder="Enter your name"
             required
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input TelInput smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Phone Number
    </label>
    <div class="relative">
      <input class="form-input bg-white border-gray-300"
             id
             type="tel"
             placeholder="(123) 456-7890"
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input WithEnterKeyEvent smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="space-y-4">
    <div class="flex flex-col gap-1">
      <label for
             class="text-sm font-medium text-gray-700"
      >
        Quick Add
      </label>
      <div class="relative">
        <svg width="16"
             height="16"
             viewbox="0 0 24 24"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
             class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer left-3"
        >
          <circle cx="11.5"
                  cy="11.5"
                  r="9.5"
                  stroke="currentColor"
                  stroke-width="1.5"
                  opacity="0.5"
          >
          </circle>
          <path d="M18.5 18.5L22 22"
                stroke="currentColor"
                stroke-width="1.5"
                stroke-linecap="round"
          >
          </path>
        </svg>
        <input class="pl-10 form-input bg-white border-gray-300"
               id
               type="text"
               placeholder="Type and press Enter"
               value
        >
      </div>
    </div>
  </div>
</div>
`;

exports[`Elements/Input WithError smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Email
    </label>
    <div class="relative">
      <svg xmlns="http://www.w3.org/2000/svg"
           width="24"
           height="24"
           viewbox="0 0 24 24"
           fill="none"
           stroke="currentColor"
           stroke-width="1.5"
           stroke-linecap="round"
           stroke-linejoin="round"
           class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer left-3"
      >
        <line x1="18"
              y1="6"
              x2="6"
              y2="18"
        >
        </line>
        <line x1="6"
              y1="6"
              x2="18"
              y2="18"
        >
        </line>
      </svg>
      <input class="pl-10 form-input bg-white border-red-500"
             id
             type="email"
             placeholder="Enter email"
             value
      >
    </div>
    <span class="text-sm text-red-500 mt-1">
      This field is required
    </span>
  </div>
</div>
`;

exports[`Elements/Input WithIcon smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Search
    </label>
    <div class="relative">
      <svg width="16"
           height="16"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer left-3"
      >
        <circle cx="11.5"
                cy="11.5"
                r="9.5"
                stroke="currentColor"
                stroke-width="1.5"
                opacity="0.5"
        >
        </circle>
        <path d="M18.5 18.5L22 22"
              stroke="currentColor"
              stroke-width="1.5"
              stroke-linecap="round"
        >
        </path>
      </svg>
      <input class="pl-10 form-input bg-white border-gray-300"
             id
             type="text"
             placeholder="Search for something..."
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input WithIconOppositePosition smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for
           class="text-sm font-medium text-gray-700"
    >
      Username
    </label>
    <div class="relative">
      <svg width="18"
           height="18"
           viewbox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
           class="absolute top-1/2 transform -translate-y-1/2 cursor-pointer right-3"
      >
        <circle cx="12"
                cy="6"
                r="4"
                stroke="currentColor"
                stroke-width="1.5"
        >
        </circle>
        <path opacity="0.5"
              d="M20 17.5C20 19.9853 20 22 12 22C4 22 4 19.9853 4 17.5C4 15.0147 7.58172 13 12 13C16.4183 13 20 15.0147 20 17.5Z"
              stroke="currentColor"
              stroke-width="1.5"
        >
        </path>
      </svg>
      <input class="pr-10 form-input bg-white border-gray-300"
             id
             type="text"
             placeholder="Enter username"
             value
      >
    </div>
  </div>
</div>
`;

exports[`Elements/Input WithLabel smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div class="flex flex-col gap-1">
    <label for="username-input"
           class="text-sm font-medium text-gray-700"
    >
      Username
    </label>
    <div class="relative">
      <input class="form-input bg-white border-gray-300"
             id="username-input"
             type="text"
             placeholder="Enter username"
             value
      >
    </div>
  </div>
</div>
`;
